--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^4.41.1",
-    "next": "13.5.5",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0"
